--- a/example/xr.yaml
+++ b/example/xr.yaml
@@ -1,6 +1,37 @@
 # Replace this with your XR!
-apiVersion: example.crossplane.io/v1
-kind: XR
+# apiVersion: example.crossplane.io/v1
+# kind: XR
+# metadata:
+#   name: example-xr
+# spec: {}
+
+apiVersion: apiextensions.crossplane.io/v1
+kind: CompositeResourceDefinition
 metadata:
-  name: example-xr
-spec: {}
+  name: nosqls.database.example.com
+spec:
+  group: database.example.com
+  names:
+    kind: NoSQL
+    plural: nosqls
+  versions:
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            type: object
+            properties:
+              location:
+                type: string
+                oneOf:
+                  - pattern: '^EU$'
+                  - pattern: '^US$'
+            required:
+              - location
+    served: true
+    referenceable: true
+  claimNames:
+    kind: NoSQLClaim
+    plural: nosqlclaims
